PROJECT(Sort)

cmake_minimum_required(VERSION 2.6)

add_subdirectory(Bubbling)
add_subdirectory(Fast)
add_subdirectory(Heap)
add_subdirectory(Insert)
add_subdirectory(Merge)
add_subdirectory(Radix)
add_subdirectory(Select)
add_subdirectory(Shell)



IF(WIN32)

ENDIF(WIN32)

# install
#INSTALL(FILES COPYRIGHT  AUTHORS README DESTINATION share/docs/)
#INSTALL(PROGRAMS runhello.sh DESTINATION bin)
#INSTALL(DIRECTORY docs/ DESTINATION share/docs/)

